@@ -12,12 +12,22 @@ matrix:
       env: TOXENV=py37-django22
     - python: 3.6
       env: TOXENV=py36-django22
-    - python: 3.8
-      env: TOXENV=py36-django30
+    - python: 3.6
+      env: TOXENV=py36-django31
     - python: 3.7
-      env: TOXENV=py37-django30
+      env: TOXENV=py37-django31
     - python: 3.8
-      env: TOXENV=py38-django30
+      env: TOXENV=py38-django31
+    - python: 3.9
+      env: TOXENV=py39-django31
+    - python: 3.6
+      env: TOXENV=py36-django32
+    - python: 3.7
+      env: TOXENV=py37-django32
+    - python: 3.8
+      env: TOXENV=py38-django32
+    - python: 3.9
+      env: TOXENV=py39-django32
     - python: 3.8
       env: TOXENV=py38-djangomain
     - python: 3.9
